<resources>
    <string name="app_name">Movie Ratings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="igor_gvozdic_email" translatable="false">igorgvozdic@gmail.com</string>
    <string name="marco_agrippa_github" translatable="false">https://github.com/MarcoAgrippa</string>
    <string name="bio"><![CDATA[My name is Igor Gvozdić and I am an Android & Java EE developer. If you want to know more about me or if you want to contact me, just click on one of the links below. ]]></string>
    <string name="hi">Hi!</string>
    <string name="git_hub_logo_description" translatable="false">Git hub logo</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="linked_in_logo_description" translatable="false">Linked In logo</string>
    <string name="linkedin" translatable="false">LinkedIn</string>
    <string name="g_mail_logo_description" translatable="false">G mail logo</string>
    <string name="gmail" translatable="false">Gmail</string>
    <string name="igor_gvozdic_web_page" translatable="false">igorgvozdic.com</string>
    <string name="www" translatable="false">www.</string>
    <string name="movie_ratings" translatable="false">Movie Ratings</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_average_score">Sort by Average Score</string>
    <string name="marcus_agripa_studio" translatable="false">Marcus Agripa Studio</string>
    <string name="www_igorgvozdic_com" translatable="false">www.igorgvozdic.com</string>
    <string name="date_of_release">Date of release</string>
    <string name="average_vote">Average Vote</string>
    <string name="language">Language:</string>
    <string name="vote_count">Vote Count</string>
    <string name="adults_only">Adults only:</string>
    <string name="overview">Overview</string>
    <string name="movie_poster">Movie poster</string>
    <string name="instruction1">Swipe from left to right to see available categories</string>
    <string name="welcome_message">Welcome to the Movie Rating app.</string>
    <string name="pointing_finger_to_left">Pointing finger to left</string>
    <string name="no">No</string>
    <string name="save_to_favorites">Saved to favorite movies</string>
    <string name="save_movie_dialog">Save movie?</string>
    <string name="add_movie_question">Add this movie to the list of favorite movies?</string>
    <string name="yes">Yes</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="credits">Credits</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular_movies_toolbar">Popular Movies</string>
    <string name="top_rated_movie_toolbar">Top rated Movies</string>
    <string name="upcoming_movie_toolbar">Upcoming Movies</string>
    <string name="favorite_movies_toolbar">Favorite Movies</string>
    <string name="credits_toolbar">Credits</string>
    <string name="average_rating_transition" translatable="false">average_score_share</string>
    <string name="poster_transition" translatable="false">poster_share</string>

</resources>
