<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group  android:checkableBehavior="single"
            android:id="@+id/nav_top">
        <item
            android:id="@+id/nav_first_popular"
            android:icon="@drawable/number1"
            android:title="@string/popular"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_top_rated"
            android:icon="@drawable/number2"
            android:title="@string/top_rated" />
        <item
            android:id="@+id/nav_third_upcoming"
            android:icon="@drawable/number3"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_fourth_favorites"
            android:icon="@drawable/number4"
            android:title="@string/favorite_movies" />
    </group>

    <group  android:checkableBehavior="single"
            android:id="@+id/nav_bottom">
        <item
            android:id="@+id/nav_fifth_credits"
            android:icon="@drawable/copyright"
            android:title="@string/credits" />

    </group>

</menu>
